Fix text overflow

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@ body {
   -o-background-size: cover;
 }
 
+html {
+  padding: 0;
+  margin: 0;
+}
+
 /* Header */
 #cover {
   background-image: url(../images/background.png);
@@ -121,6 +126,7 @@ body {
   font-size: 20px;
   background-color: #fff;
   background-image: url("https://www.transparenttextures.com/patterns/bright-squares.png");
+  overflow-wrap: break-word;
 }
 
 .fav-qoutes {
